feature: import bookmark api (#12)
